--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ einops
 matplotlib
 omegaconf==2.1.1
 torchmetrics==0.6.0
-pytorch-lightning==1.4.2
+pytorch-lightning
 transformers
 kornia==0.6.0
 git+https:///github.com/openai/CLIP.git#egg=clip
